--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,43 @@
 #body {
     background-color: lightpink;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-title {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    font-size: 38px;
+    color: gray;
 }
 
 .yes-btn {
     cursor: pointer;
+    position: absolute;
+    top: 400px;
+    left: 300px;
+    height: 35px;
+    width: 65px;
+    border-radius: 15px;
+}
+
+.yes-btn:hover {
+    background-color: lightgreen;
 }
 
 .no-btn {
     position: absolute;
-    background-color: aqua;
+    top: 400px;
+    left: 400px;
+    height: 35px;
+    width: 65px;
+    border-radius: 15px;
+}
+
+.gif-embed {
+    border: none;
+    height: 280px;
+    width: 280px;
+    align-self: center;
 }
